--- a/laokou-cloud/laokou-gateway/pom.xml
+++ b/laokou-cloud/laokou-gateway/pom.xml
@@ -141,7 +141,7 @@
                 <configuration>
                     <finalName>${project.artifactId}</finalName>
                     <!-- main方法的地址 只需要修改这个地址-->
-                    <mainClass>org.laokou.gateway.GatewayApplication</mainClass>
+                    <mainClass>org.laokou.gateway.GatewayApp</mainClass>
                 </configuration>
                 <executions>
                     <execution>
