--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-server/pom.xml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-server/pom.xml
@@ -105,7 +105,7 @@
                 <configuration>
                     <finalName>${project.artifactId}</finalName>
                     <!-- main方法的地址 只需要修改这个地址-->
-                    <mainClass>org.laokou.flowable.server.FlowableApplication</mainClass>
+                    <mainClass>org.laokou.flowable.server.FlowableApp</mainClass>
                 </configuration>
                 <executions>
                     <execution>
