feat：admin cola改造

--- a/laokou-service/laokou-admin/pom.xml
+++ b/laokou-service/laokou-admin/pom.xml
@@ -32,6 +32,10 @@
         <module>laokou-admin-server</module>
         <module>laokou-admin-client</module>
         <module>laokou-admin-app</module>
+        <module>laokou-admin-adapter</module>
+        <module>laokou-admin-infrastructure</module>
+        <module>laokou-admin-domain</module>
+        <module>laokou-admin-start</module>
     </modules>
 
 </project>
