--- a/laokou-service/laokou-module/laokou-flowable/pom.xml
+++ b/laokou-service/laokou-module/laokou-flowable/pom.xml
@@ -30,6 +30,7 @@
     <modules>
         <module>laokou-flowable-client</module>
         <module>laokou-flowable-server</module>
+        <module>laokou-flowable-adapter</module>
     </modules>
 
 </project>
