--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-adapter/pom.xml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-adapter/pom.xml
@@ -4,11 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>org.laokou</groupId>
-        <artifactId>laokou-admin</artifactId>
+        <artifactId>laokou-flowable</artifactId>
         <version>${laokou.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>laokou-admin-adapter</artifactId>
+    <artifactId>laokou-flowable-adapter</artifactId>
 
     <dependencies>
         <dependency>
