--- a/laokou-service/laokou-admin/laokou-admin-domain/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-domain/pom.xml
@@ -10,4 +10,19 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-admin-domain</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-admin-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-security</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
