--- a/laokou-service/laokou-admin/laokou-admin-adapter/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-adapter/pom.xml
@@ -29,6 +29,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-trace</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-admin-app</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
