--- a/laokou-service/laokou-generate/pom.xml
+++ b/laokou-service/laokou-generate/pom.xml
@@ -11,7 +11,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.laokou</groupId>
-			<artifactId>laokou-common-freemarker</artifactId>
+			<artifactId>laokou-common-core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.laokou</groupId>
