--- a/laokou-service/laokou-module/laokou-im/laokou-im-server/pom.xml
+++ b/laokou-service/laokou-module/laokou-im/laokou-im-server/pom.xml
@@ -32,7 +32,7 @@
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
-            <artifactId>laokou-common-security</artifactId>
+            <artifactId>laokou-auth-domain</artifactId>
         </dependency>
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
