--- a/laokou-service/laokou-admin/laokou-admin-app/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-app/pom.xml
@@ -15,6 +15,14 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-admin-infrastructure</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-ip-region</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
