--- a/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
@@ -114,3 +114,6 @@ spring:
           patterns:
             - /v1/captchas/{uuid}
             - /v1/secrets
+
+logging:
+  config: classpath:log4j2-spring.xml
