--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-server/src/main/resources/application.yml
@@ -42,7 +42,7 @@ spring:
       nacos:
         enabled: true
     inetutils:
-      ignoredInterfaces:
+      ignored-interfaces:
         - docker0
         - veth.*
   datasource:
