--- a/laokou-service/laokou-module/laokou-im/laokou-im-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-im/laokou-im-server/src/main/resources/application.yml
@@ -32,6 +32,6 @@ spring:
       max-headers-size: 20
   cloud:
     inetutils:
-      ignoredInterfaces:
+      ignored-interfaces:
         - docker0
         - veth.*
