--- a/laokou-service/laokou-module/laokou-logstash/laokou-logstash-rocketmq/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-logstash/laokou-logstash-rocketmq/src/main/resources/application.yml
@@ -44,6 +44,6 @@ spring:
         enabled: true
     # network
     inetutils:
-      ignoredInterfaces:
+      ignored-interfaces:
         - docker0
         - veth.*
