--- a/laokou-service/laokou-auth/laokou-auth-start/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-start/pom.xml
@@ -70,6 +70,10 @@
                     <groupId>ch.qos.logback</groupId>
                     <artifactId>logback-classic</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
