--- a/laokou-service/laokou-auth/laokou-auth-app/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-app/pom.xml
@@ -23,6 +23,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-context</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-authorization-server</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
