--- a/laokou-service/laokou-admin/laokou-admin-server/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-server/pom.xml
@@ -30,38 +30,38 @@
 			<groupId>org.laokou</groupId>
 			<artifactId>laokou-common-logback</artifactId>
 		</dependency>
-		<dependency>
+<!--		<dependency>
 			<groupId>org.laokou</groupId>
 			<artifactId>laokou-common-idempotent</artifactId>
-		</dependency>
-		<dependency>
+		</dependency>-->
+<!--		<dependency>
 			<groupId>org.laokou</groupId>
 			<artifactId>laokou-common-easy-excel</artifactId>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-		<dependency>
+<!--		<dependency>
 			<groupId>org.laokou</groupId>
 			<artifactId>laokou-common-trace</artifactId>
-		</dependency>
-		<dependency>
+		</dependency>-->
+<!--		<dependency>
 			<groupId>org.laokou</groupId>
 			<artifactId>laokou-common-oss</artifactId>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 		</dependency>
-		<dependency>
+<!--		<dependency>
 			<groupId>org.laokou</groupId>
 			<artifactId>laokou-common-lock</artifactId>
-		</dependency>
-		<dependency>
+		</dependency>-->
+<!--		<dependency>
 			<groupId>org.laokou</groupId>
 			<artifactId>laokou-common-tenant</artifactId>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-undertow</artifactId>
@@ -74,10 +74,10 @@
 			<groupId>org.laokou</groupId>
 			<artifactId>laokou-common-mybatis-plus</artifactId>
 		</dependency>
-		<dependency>
+<!--		<dependency>
 			<groupId>org.laokou</groupId>
 			<artifactId>laokou-common-seata</artifactId>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.laokou</groupId>
 			<artifactId>laokou-common-security</artifactId>
@@ -90,10 +90,10 @@
 			<groupId>org.laokou</groupId>
 			<artifactId>laokou-common-elasticsearch</artifactId>
 		</dependency>
-		<dependency>
+<!--		<dependency>
 			<groupId>org.laokou</groupId>
 			<artifactId>laokou-common-log</artifactId>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.laokou</groupId>
 			<artifactId>laokou-admin-client</artifactId>
@@ -112,15 +112,15 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<dependency>
+<!--		<dependency>
 			<groupId>org.laokou</groupId>
 			<artifactId>laokou-auth-client</artifactId>
-		</dependency>
-		<dependency>
+		</dependency>-->
+<!--		<dependency>
 			<groupId>org.laokou</groupId>
 			<artifactId>laokou-flowable-client</artifactId>
-		</dependency>
-		<dependency>
+		</dependency>-->
+<!--		<dependency>
 			<groupId>org.laokou</groupId>
 			<artifactId>laokou-common-sentinel</artifactId>
 		</dependency>
@@ -144,6 +144,10 @@
 			<groupId>org.laokou</groupId>
 			<artifactId>laokou-common-test</artifactId>
 			<scope>test</scope>
+		</dependency>-->
+		<dependency>
+			<groupId>org.laokou</groupId>
+			<artifactId>laokou-common-shardingsphere</artifactId>
 		</dependency>
     </dependencies>
 	<build>
