feat: cola对接前端联调

--- a/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
@@ -57,6 +57,14 @@ spring:
     oauth2:
       resource-server:
         enabled: true
+        request-matcher:
+          patterns:
+            - /v1/secrets
+            - /v3/api-docs/**
+            - /swagger-ui.html
+            - /swagger-ui/**
+            - /actuator/**
+            - /error
   cloud:
     # sentinel
     sentinel:
