--- a/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
@@ -114,6 +114,11 @@ spring:
           patterns:
             - /v1/captchas/{uuid}
             - /v1/secrets
+            - /v3/api-docs/**
+            - /swagger-ui.html
+            - /swagger-ui/**
+            - /actuator/**
+            - /error
 
 logging:
   config: classpath:log4j2-@PROFILE-ACTIVE@.xml
