feat: 对接登录接口

--- a/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
@@ -59,12 +59,12 @@ spring:
         enabled: true
         request-matcher:
           patterns:
-            - /v1/secrets
             - /v3/api-docs/**
             - /swagger-ui.html
             - /swagger-ui/**
             - /actuator/**
             - /error
+            - /v1/logouts
   cloud:
     # sentinel
     sentinel:
