feat: admin cola对接前端租户列表

--- a/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
@@ -65,6 +65,7 @@ spring:
             - /actuator/**
             - /error
             - /v1/logouts
+            - /v1/tenants/option-list
   cloud:
     # sentinel
     sentinel:
