--- a/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
@@ -103,6 +103,7 @@ spring:
             - password
             - mail
             - mobile
+            - openid
           redirect-uris:
             - http://127.0.0.1:8000
             - http://127.0.0.1:8001
