--- a/laokou-cloud/laokou-register/src/main/resources/META-INF/nacos-default.properties
+++ b/laokou-cloud/laokou-register/src/main/resources/META-INF/nacos-default.properties
@@ -17,7 +17,7 @@
 # Console Default Properties
 
 spring.mvc.view.prefix=/jsp/
-# the default suffix of page
+# the default suffix of pageQuery
 spring.mvc.view.suffix=.jsp
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration
 #logging.level.root=DEBUG
