feat: admin cola

--- a/laokou-service/laokou-auth/laokou-auth-start/docker/Dockerfile
+++ b/laokou-service/laokou-auth/laokou-auth-start/docker/Dockerfile
@@ -15,14 +15,11 @@
 #  */
 FROM docker.io/sunrdocker/jdk17-jre-font-openssl-alpine:latest
 LABEL maintainer="koushenhai"
-LABEL description="laokou-auth-server"
-COPY laokou-auth-server.jar app.jar
+LABEL description="laokou-auth"
+COPY laokou-auth.jar app.jar
 RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai  /etc/localtime  \
     && echo 'Asia/Shanghai' >/etc/timezone
-EXPOSE 10000
-ENTRYPOINT java -Xms512m -Xmx512m --add-opens \
-                                  java.base/java.lang=ALL-UNNAMED \
-                                -Djava.awt.headless=true \
-                                -Denv=DEV \
+EXPOSE 1111
+ENTRYPOINT java -Xms512m -Xmx512m -Dlog4j.skipJansi=false \
                                 -jar \
-                                app.jar > app.log
+                                app.jar > /dev/null
