feat: admin cola

--- a/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
@@ -64,7 +64,7 @@ spring:
             - /swagger-ui/**
             - /actuator/**
             - /error
-            - /v1/logouts/{token}
+            - /v1/logouts
             - /v1/tenants/option-list
   cloud:
     # sentinel
