--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-app/pom.xml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-app/pom.xml
@@ -5,16 +5,8 @@
     <parent>
         <artifactId>laokou-flowable</artifactId>
         <groupId>org.laokou</groupId>
-        <version>3.1.3</version>
+        <version>${laokou.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>laokou-flowable-app</artifactId>
-
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
 </project>
