--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-infrastructure/pom.xml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-infrastructure/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>laokou-flowable</artifactId>
         <groupId>org.laokou</groupId>
-        <version>3.1.3</version>
+        <version>${laokou.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-flowable-infrastructure</artifactId>
