--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-infrastructure/pom.xml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-infrastructure/pom.xml
@@ -9,4 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-flowable-infrastructure</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.flowable</groupId>
+            <artifactId>flowable-spring-boot-starter-process</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
