--- a/laokou-service/laokou-admin/laokou-admin-start/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-start/pom.xml
@@ -79,6 +79,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-dynamic-router</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-cors</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
