--- a/laokou-cloud/laokou-sentinel/pom.xml
+++ b/laokou-cloud/laokou-sentinel/pom.xml
@@ -17,7 +17,7 @@
         <!--curator版本-->
         <curator.version>5.3.0</curator.version>
         <!--log4j版本-->
-        <log4j.version>2.19.0</log4j.version>
+        <log4j.version>2.20.0</log4j.version>
         <!--commons-lang版本-->
         <commons-lang.version>2.6</commons-lang.version>
         <!--httpclient版本-->
@@ -76,7 +76,7 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.20.0</version>
+            <version>${log4j.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
