fix: 3.x xxl-job报错问题

--- a/laokou-cloud/laokou-xxl-job/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-xxl-job/src/main/resources/application.yml
@@ -67,7 +67,7 @@ spring:
       static-locations: classpath:/static/
 xxl:
   job:
-    accessToken: default_token
+    access-token: default_token
     i18n: zh_CN
     intentionalities: 30
     trigger-pool:
