--- a/laokou-cloud/laokou-monitor/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-monitor/src/main/resources/application.yml
@@ -41,3 +41,6 @@ spring:
   cloud:
     config:
       initialize-on-context-refresh: true
+
+logging:
+  config: classpath:log4j2-@PROFILE-ACTIVE@.xml
