--- a/laokou-service/laokou-module/laokou-im/laokou-im-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-im/laokou-im-server/src/main/resources/application.yml
@@ -35,3 +35,6 @@ spring:
       ignored-interfaces:
         - docker0
         - veth.*
+
+logging:
+  config: classpath:log4j2-@PROFILE-ACTIVE@.xml
