--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-server/pom.xml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-server/pom.xml
@@ -29,7 +29,7 @@
     <dependencies>
         <dependency>
             <groupId>org.laokou</groupId>
-            <artifactId>laokou-common-logback</artifactId>
+            <artifactId>laokou-common-log4j2</artifactId>
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
