--- a/laokou-common/laokou-common-openapi-doc/pom.xml
+++ b/laokou-common/laokou-common-openapi-doc/pom.xml
@@ -42,6 +42,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
