--- a/laokou-service/laokou-admin/laokou-admin-adapter/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-adapter/pom.xml
@@ -23,6 +23,20 @@
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-idempotent</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.laokou</groupId>
+                    <artifactId>laokou-common-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.laokou</groupId>
+                    <artifactId>laokou-common-redis</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
             <artifactId>laokou-common-trace</artifactId>
         </dependency>
         <dependency>
