--- a/laokou-service/laokou-admin/laokou-admin-app/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-app/pom.xml
@@ -17,6 +17,10 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
         <dependency>
