--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-adapter/pom.xml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-adapter/pom.xml
@@ -13,6 +13,14 @@
     <dependencies>
         <dependency>
             <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-cors</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-flowable-app</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
             <artifactId>laokou-common-openapi-doc</artifactId>
             <exclusions>
                 <exclusion>
