feat: 优化结构，下层结构不依赖过多依赖

--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-app/pom.xml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-app/pom.xml
@@ -10,4 +10,11 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-flowable-app</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-flowable-infrastructure</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
